# First_year_Final_Project

./: CMakeLists.txt  README.md
include/: chess_FEN.h  chess_board.h  chess_checksandpins.h  chess_game.h  chess_moves.h  chess_piece_data.h  chess_unmake.h
src/: ChessBoard.c  chess_FEN.c  chess_board.c  chess_checksandpins.c  chess_game.c  chess_moves.c  chess_piece_data.c  chess_unmake.c
